// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ngac Permission Tests should pass permission check 1`] = `
Object {
  "allowedEvents": Array [
    "DocCreated",
  ],
  "attributes": Object {
    "uri": "model/Org2MSP/doc",
  },
  "condition": Object {
    "hasList": Object {
      "createDoc": "creator_id",
    },
  },
  "effect": "Allow",
  "policyClass": "ngac-pe-policy",
  "sid": "allowCreateDoc",
}
`;

exports[`Permission Test 2 should should pass the test, for existing entityId 1`] = `
Object {
  "allowedEvents": Array [
    "DocUpdated",
  ],
  "condition": Object {
    "hasList": Object {
      "updateDoc": "creator_id",
    },
    "stringEquals": Object {
      "invoker_id": "creator_id",
      "invoker_mspid": "creator_mspid",
    },
  },
  "effect": "Allow",
  "policyClass": "ngac-pe-policy",
  "sid": "allowUpadateDoc",
}
`;
